Bug 1798218 - Ignore transitions for printing. r=hiro

Two tweaks:

 * Use nsPresContext::Medium to decide whether to start transitions.
   This catches both the print emulation and the before/afterprint event
   dispatching code too, which is desirable.

 * Don't clone transition effects for print docs. This seems to match
   other browsers (click "trigger transition", then Ctrl+P in Chromium
   for example).

Move our existing css-animations tests to WPT. They were written for
compat with other browsers so we want to know if other browsers behave
differently.

Differential Revision: https://phabricator.services.mozilla.com/D161086